<resources>
    <string name="app_name">DataBindingStudy2</string>

    <string name="demo_simple">Simple</string>


    <string name="demo_list">List</string>
    <string name="demo_list_add_item">Add item</string>
    <string name="demo_list_remove_item">Remove item</string>


    <string name="demo_two_way">Two Way</string>
    <string name="welcome">Hello %s</string>

    <string name="demo_expression">Expression</string>


    <string name="demo_lambda">Lambda</string>
    <string name="demo_lambda_test_longclick">Test onLongClick</string>
    <string name="demo_lambda_test_focus_change">Test onLongClick</string>
    <string name="demo_lambda_test_onclick">Test onClick</string>

    <string name="demo_animation">Animation</string>
    <string name="demo_show_imageview">Show Image</string>

    <string name="demo_change_component">Change Component</string>

</resources>
