<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="presenter"
            type="com.example.zhanghua.databindingstudy2.MainActivity.Presenter" />


    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="@{presenter.showSimpleDemo}"
            android:text="@string/demo_simple"
            android:textColor="@color/colorAccent" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="@{presenter.showListDemo}"
            android:text="@string/demo_list"
            android:textColor="@color/colorAccent" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="@{presenter.showTwoWayDemo}"
            android:text="@string/demo_two_way"
            android:textColor="@color/colorAccent" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="@{presenter.showExpressionDemo}"
            android:text="@string/demo_expression"
            android:textColor="@color/colorAccent" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="@{presenter.showLambdaDemo}"
            android:text="@string/demo_lambda"
            android:textColor="@color/colorAccent" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="@{presenter.showAnimationDemo}"
            android:text="@string/demo_animation"
            android:textColor="@color/colorAccent" />

    </LinearLayout>


</layout>
